# Landingpages-Store

./: .env.example  .gitignore  README.md  __init__.py  gulpfile.js  logic_modul.py  main.py  package.json  pyproject.toml  script
.ansible/: ansible.cfg  deploy-webapp.yml  punycode.sh  vault.py
.ansible/inventory/: hosts
.ansible/inventory/group_vars/: vars.yml
.ansible/inventory/host_vars/: landings_host.yml
.ansible/templates/: blank_site.conf.j2  default.html.j2  docker-compose.yml.j2  nginx-vhost-blank.conf.j2  nginx-vhost.conf.j2  nginx.conf.j2  traefik.toml.j2
landing-store/: __init__.py  logic_modul.py  сore_logic.py
landing-store/templates/: index.html
moduls/: logic_modul.py
tmp/project1923978/: htaccess  page20241718.html  robots.txt  sitemap.xml
tmp/project1923978/css/: tilda-blocks-page20241718.min.css
tmp/project1923978/files/: page20241718body.html
tmp/project1923978/js/: tilda-blocks-page20241718.min.js
